# FLAMES

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
routes/models/: models_model.py
systems/postgres/llm_services/: model_parameters.sql  models.sql
