[project]
name = "fastapi-simple-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.2.1",
    "fastapi>=0.115.6",
    "httpx>=0.28.1",
    "hypercorn>=0.17.3",
    "passlib>=1.7.4",
    "pendulum>=3.0.0",
    "polars>=1.22.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.4",
    "pyjwt[crypto]>=2.10.1",
    "python-multipart>=0.0.20",
    "ruff>=0.8.6",
    "sqlalchemy>=2.0.38",
]
